package ua.hillel.lessons.lesson25.demos._07_proxy;

// Інтерфейс для BoatReal
public interface IBoat {
    void enter(Person person);
}
